elt97